# Crescendo2024

./: LICENSE  README.md  constants.py  pyproject.toml  robot.py  robotcontainer.py
.wpilib/: wpilib_preferences.json
commands/: __init__.py  autonomous.py  shoot.py  shoot_amp.py  shoot_speaker.py
subsystems/: __init__.py  climber.py  drive.py  left_climber.py  right_climber.py  servos.py  shooter.py
