#
# Use this configuration file to control what RobotPy packages are installed
# on your RoboRIO
#

[project]
name = "L-03"
version = "0.2.0"
dependencies = ["robotpy[phoenix5,rev,commands2]==2024.3.1.0"]
requires-python = ">= 3.12"


[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2024.3.1.0"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
robotpy_extras = [
    # "all",
    # "apriltag",
    "commands2",
    # "cscore",
    # "navx",
    # "pathplannerlib",
    "phoenix5",
    # "phoenix6",
    # "playingwithfusion",
    "rev",
    # "romi",
    # "sim",
    # "xrp",
]

# Other pip packages to install
requires = []
